--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
-
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">booqit</string>
     <string name="title_activity_main">booqit</string>
     <string name="package_name">com.x16studios.booqit</string>
     <string name="custom_url_scheme">com.x16studios.booqit</string>
 </resources>
+
